--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ footer { text-align: center; padding: 20px; }
         <p class="animate-header">Quality Services You Can Trust</p>
     </div>
     <a href="#top" class="logo-link">
-        <img src="C:\Users\user\OneDrive\Desktop\conquest\awards.jpeg" alt="Logo" class="logo">
+        <img src="C:\Users\user\OneDrive\Desktop\conquest\images\awards.jpeg" alt="Logo" class="logo">
     </a>
 </header>
 
@@ -200,7 +200,7 @@ footer { text-align: center; padding: 20px; }
 <section id="home">
     <div class="home-slider">
         <div class="slide active">
-            <img src="C:\Users\user\Downloads\WhatsApp Image 2026-01-24 at 16.53.21.jpeg" alt="">
+            <img src="C:\Users\user\OneDrive\Desktop\conquest\images\WhatsApp Image 2026-01-24 at 16.53.21.jpeg" alt="">
             <div class="overlay-text"><h2>Welcome to Our Business</h2><p>Quality services you can trust</p></div>
         </div>
         <div class="slide">
