--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CONQUEST-Achieving Greatness</title>
+<title>CONQUEST Artz & Design – Graphic Design, Printing & Framing in Etinan</title>
+<meta name="description" content="CONQUEST – Achieving Greatness is a creative art and design brand in Etinan, Akwa Ibom State, offering graphic design, printing, picture framing, artz and window blinds services.">
+<meta name="keywords" content="Conquest Artz, graphic design Etinan, printing services Akwa Ibom, picture framing Nigeria, art design Etinan ">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
@@ -170,7 +172,7 @@ footer { text-align: center; padding: 20px; font-weight: bold; }
 
 <header class="header" id="top">
     <a href="#top" class="logo-link"><img src="logo.jpeg" class="logo"></a>
-    <h1>CONQUEST <br> Achieving Greatness</h1>
+    <h1>CONQUEST<br>Achieving Greatness </br></h1>
     <p>Home Of Artz. </p>
 </header>
 
@@ -185,15 +187,15 @@ footer { text-align: center; padding: 20px; font-weight: bold; }
 <section id="home">
     <div class="home-slider">
         <div class="slide active">
-            <img src="home1.png">
+            <img src="home1.png" alt="Welcome To Conquest">
             <div class="overlay-text"><h2></h2><p>Welcome To conquest.</p></div>
         </div>
         <div class="slide">
-            <img src="home2.jpg">
+            <img src="home2.jpg" alt="Conquest Artz in Etinan, Akwa ibom State">
             <div class="overlay-text"><h2></h2><p>A One Stop Site for Artz.</p></div>
         </div>
         <div class="slide">
-            <img src="home31.jpg">
+            <img src="home31.jpg" alt="Home of Exceptionalism And Perfectionalism">
             <div class="overlay-text"><h2></h2><p>Your Satisfaction Is Our Priority.</p></div>
         </div>
         <div class="home-dots"></div>
@@ -204,8 +206,8 @@ footer { text-align: center; padding: 20px; font-weight: bold; }
 <section id="about">
     <h2>About Us</h2>
     <div class="about-slider">
-        <div class="about-slide active"><img src="neee.jpg"><div class="overlay-text">OUR MISSION: <br>Meeting the Need and Want of Our Potential Customers.</div> </div>
-        <div class="about-slide"><img src="meee.jpg"><div class="overlay-text">OUR VISION: <br> To Provide The Best Customer Service Possible And to Deliver An Unmatched Service In The Best Possible Way.</div></div>
+        <div class="about-slide active"><img src="neee.jpg" alt="Our MISSION"><div class="overlay-text">MISSION: <br>Meeting the Need and Want of Our Potential Customers.</div> </div>
+        <div class="about-slide"><img src="meee.jpg" alt="Our VISION"><div class="overlay-text">VISION: <br> To Provide The Best Customer Service Possible And to Deliver An Unmatched Service In The Best Possible Way.</div></div>
         <div class="about-prev">&#10094;</div>
         <div class="about-next">&#10095;</div>
     </div>
@@ -215,11 +217,11 @@ footer { text-align: center; padding: 20px; font-weight: bold; }
 <section id="services">
     <h2>Our Services</h2>
     <div class="services-section">
-        <div class="service-card active"><img src="service1.jpg"><h3>We offer good graphic design for all events and with affordable prices.</h3><p></p></div>
-        <div class="service-card"><img src="service2.jpg"><h3>Professional & Exceptional Picture Framing of all Sizes.</h3><p></p></div>
-        <div class="service-card"><img src="service31.jpg"><h3>Quality and Top Notch Artz of various Types. </h3><p></p></div>
-        <div class="service-card"><img src="about2.jpg"><h3>Good Home Design-Friendly Windows Blinds.</h3><p></p></div>
-        <div class="service-card"><img src="service5.jpg"><h3>We also Offer Printing Services of Different Kinds.</h3></div>
+        <div class="service-card active"><img src="service1.jpg" alt="Graphic Design of High Class"><h3>We offer good graphic design for all events and with affordable prices.</h3><p></p></div>
+        <div class="service-card"><img src="service2.jpg" alt="Quality Picture Framing"><h3>Professional & Exceptional Picture Framing of all Sizes.</h3><p></p></div>
+        <div class="service-card"><img src="service31.jpg" alt="Artz of Various Types"><h3>Quality and Top Notch Artz of various Types. </h3><p></p></div>
+        <div class="service-card"><img src="about2.jpg" alt="Good Window Blinds Design"><h3>Good Home Design-Friendly Windows Blinds.</h3><p></p></div>
+        <div class="service-card"><img src="service5.jpg" alt="Various Printing Services"><h3>We also Offer Printing Services of Different Kinds.</h3></div>
         <div class="service-prev">&#10094;</div>
         <div class="service-next">&#10095;</div>
     </div>
